gcc/testsuite/rust/rustc/ui/macros/macro-attribute.rs
#[doc = $not_there] // { dg-error "" "" { target *-*-* } }
fn main() { }

